# -*- Makefile -*-
# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/branches/merge-V5-V6/lqneditor/Makefile.am $
# $Id: Makefile.am 11173 2012-10-26 13:15:35Z greg $
# ------------------------------------------------------------------------
ACLOCAL_AMFLAGS=
AUTOMAKE_OPTIONS = foreign
SUBDIRS = lqneditor
