# -*- Makefile -*-
# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/branches/merge-V5-V6/parasol/Makefile.am $
# 
# Make file for Parasol simulator libraries, tests, tools, and examples
# ------------------------------------------------------------------------
# $Id: Makefile.am 15459 2022-03-09 21:53:20Z greg $
# ------------------------------------------------------------------------

SUBDIRS = src doc include/parasol tests 
EXTRA_DIST = README NEWS ChangeLog AUTHORS COPYING 
