# Makefile for $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/trunk/parasol/include/parasol/Makefile.am $
#
# Copyright (C) 2003 Greg Franks <greg@sce.carleton.ca>
# 
# ------------------------------------------------------------------------
# $Id: Makefile.am 15457 2022-03-09 15:54:19Z greg $
# ------------------------------------------------------------------------

noinst_HEADERS = ansidecl.h \
	carrier.h \
	drand48.h \
	genesis.h \
	node.h \
	para_entity.h \
	para_internals.h \
	para_privates.h \
	para_protos.h \
	para_types.h \
	parasol++.h \
	parasol.h \
	port.h \
	semaphore.h \
	spinlock.h \
	statistic.h \
	task.h 
