# $Id: Makefile.am 13424 2018-10-28 23:03:12Z greg $
noinst_HEADERS = Array.h \
	Environment.h \
	Intrinsics.h \
	LanguageObject.h \
	MethodTable.h \
	NonCopyable.h \
	Parser.h \
	Program.h \
	ReferenceCountedObject.h \
	ReferencedPointer.h \
	RuntimeException.h \
	RuntimeFlowControl.h \
	Scanner.h \
	LQXStrings.h \
	SymbolTable.h \
	SyntaxTree.h
