# $Id: Makefile.am 17009 2024-02-01 17:54:19Z greg $
noinst_HEADERS = Array.h \
	Environment.h \
	Intrinsics.h \
	LanguageObject.h \
	MethodTable.h \
	Parser.h \
	Program.h \
	ReferenceCountedObject.h \
	ReferencedPointer.h \
	RuntimeException.h \
	RuntimeFlowControl.h \
	Scanner.h \
	LQXStrings.h \
	SymbolTable.h \
	SyntaxTree.h
